# sdk-react-native

./: .editorconfig  .eslintignore  .flake8  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md  ReactNativeTanker.podspec  ci-lint.sh  mypy.ini  package.json  pyproject.toml  run-ci.py  tanker-client-react-native.podspec  tbump.toml  tsconfig.json
adminserver/: app.py
android/: build.gradle  gradle.properties  gradlew
android/src/main/: AndroidManifest.xml
android/src/newarch/: ClientReactNativeSpec.kt
android/src/oldarch/: ClientReactNativeSpec.kt
example/: .detoxrc.js  .detoxrc.json  app.json  detox.xcconfig  package.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/e2e/: .eslintrc  globalSetup.ts  jest.config.js  runTests.e2e.js  starter.test.ts
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/ClientReactNativeExample/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  Info.plist  LaunchScreen.storyboard  main.m
example/ios/ClientReactNativeExample.xcodeproj/: project.pbxproj
example/ios/ClientReactNativeExample.xcworkspace/: contents.xcworkspacedata
example/ios/ClientReactNativeExampleTests/: ClientReactNativeExampleTests.m
example/src/: App.tsx  admin.ts  framework.ts  test_basic.ts  test_encryption.ts  test_encryption_session.ts  test_tanker.ts  test_verify.ts  tests.ts
ios/: ClientReactNative+Private.h  ClientReactNative+Private.m  ClientReactNative+Private.mm  ClientReactNative.h  ClientReactNative.m  ClientReactNative.mm  TurboModule.mm  Utils+Private.h  Utils+Private.m  Utils+Private.mm  Utils.swift
ios/ClientReactNative.xcodeproj/: project.pbxproj
src/: NativeClientReactNative.ts  encryptionOptions.ts  encryptionSessionWrapper.ts  errors.ts  index.tsx  native.ts  nativeWrapper.ts  sharingOptions.ts  tanker__errors.d.ts  types.ts  verification.ts
tanker-client-react-native/: README.md  index.js  package.json  tanker-client-react-native.podspec
tanker-client-react-native/android/: build.gradle
tanker-client-react-native/example/: App.js  package.json
tanker-client-react-native/ios/: Tanker.h  Tanker.m
(+37 files in other folders)
