[tool.poetry]
name = "sdk-react-native"
version = "0.1.0"
description = ""
authors = ["The Tanker Team <support@tanker.io>"]

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"
secondary = true

[tool.poetry.dependencies]
python = "^3.8"
tankerci = { version = ">= 2022.02.4058", source = "gitlab" }
tankeradminsdk = { version = "1.2.0", source = "gitlab" }
Flask = "^2.0.3"
tankersdk-identity = "^1.3.4"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
black = "21.12b0"
mypy = "0.930"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
